# t

./: LICENSE  README.md  stack.yaml  t.cabal  t.hs
src/: Main.hs
