name:               t
version:            0.1.0.0
synopsis:           Another TODO List manager
description:        Please see README.md
homepage:           http://github.com/hugo-dc/t#readme
license:            BSD3
license-file:       LICENSE
author:             @hugo_dc
maintainer:         jhugodc@gmail.com
copyright:          2016 Hugo De la cruz
category:           Desktop
build-type:         Simple
cabal-version:      >=1.10

executable t
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   Haskell2010
  build-depends:      split
                    , SHA
                    , base
                    , directory
                    , filepath
                    , bytestring

                                                                      
                                                                                                  